cabal-version: >=1.8
Name:           DBPH
Version:        0.5.1.4
Description:    Experiments with flattening and algebraic compilation
License:             GPL
License-file:   LICENSE
Author:			Jeroen Weijers <jeroen.weijers@uni-tuebingen.de>
Maintainer:		Jeroen Weijers <jeroen.weijers@uni-tuebingen.de>
Build-Type:     Simple
Library
    build-depends:    base >= 4.2,
                      mtl >= 2.0,
                      containers >= 0.3.0.0,
                      template-haskell,
                      parsec >= 3.1,
                      pretty >= 1.0.1.1,
                      filepath >= 1.1.0.4,
                      haskell-src-exts >=1.11,
                      TableAlgebra >= 2.0.0,
                      Pathfinder >= 0.5.7,
                      HaXml >= 1.22,
                      X100Client >= 0.0.2,
                      aeson >= 0.6,
                      bytestring >= 0.9,
                      ghc-prim,
                      Optimizer
    Hs-Source-Dirs:   src
    
    GHC-Options:       -O3 -Wall -fno-warn-type-defaults -fno-warn-orphans -Werror
    
    Exposed-modules: Language.ParallelLang.DBPH
                     Language.ParallelLang.Common.Data.Type
                     Language.ParallelLang.VL.Data.Query
                     Language.ParallelLang.NKL.NKLPrimitives
                     Language.ParallelLang.NKL.Opt
    Other-modules: Language.ParallelLang.Common.Data.Val
                   Language.ParallelLang.Common.Data.Op
                   Language.ParallelLang.NKL.Data.NKL
                   Language.ParallelLang.FKL.Data.FKL
                   Language.ParallelLang.FKL.FKLPrimitives
                   Language.ParallelLang.Translate.NKL2FKL
                   Language.ParallelLang.FKL.Render.Render
                   Language.ParallelLang.Common.Impossible
                   Language.ParallelLang.Common.TransM
                   Language.ParallelLang.VL.VectorPrimitives
                   Language.ParallelLang.VL.PathfinderVectorPrimitives
                   Language.ParallelLang.Translate.FKL2VL
                   Language.ParallelLang.VL.MetaPrimitives
                   Language.ParallelLang.VL.VectorOperations
                   Language.ParallelLang.VL.VectorPrimitives
                   Language.ParallelLang.Translate.Algebra2SQL
                   Language.ParallelLang.VL.X100VectorPrimitives
                   Language.ParallelLang.VL.Data.DBVector
                   Language.ParallelLang.VL.Data.GraphVector
                   Language.ParallelLang.VL.VLPrimitives
                   Language.ParallelLang.Translate.VL2Algebra

executable vltox100
    Main-is: Language/ParallelLang/Tools/VLToX100.hs
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind -Werror
    hs-source-dirs:   src
    build-depends:    base >= 4.2,
                      mtl >= 2.0,
                      containers >= 0.3.0.0,
                      template-haskell,
                      parsec >= 3.1,
                      pretty >= 1.0.1.1,
                      filepath >= 1.1.0.4,
                      haskell-src-exts >=1.11,
                      TableAlgebra >= 2.0.0,
                      Pathfinder >= 0.5.7,
                      HaXml >= 1.22,
                      X100Client >= 0.0.2,
                      aeson >= 0.6,
                      bytestring >= 0.9,
                      Optimizer,
                      ghc-prim
