Name:                DSH-Compiler
Version:             0.3.1
Synopsis:            Database Supported Haskell (Compiler)
Description:         Database Supported Haskell (Compiler)
License:             BSD3
License-file:        LICENSE
Author:              George Giorgidze, Tom Schreiber, Nils Schweinsberg and Jeroen Weijers
Maintainer:          giorgidze@gmail.com
Stability:           Experimental
Category:            Database
Build-type:          Simple

-- Extra-source-files:

Cabal-version:       >= 1.8

Library
  Build-depends:     base >= 4.2 && < 5,
                     containers >= 0.3,
                     syb >= 0.1,
                     mtl >= 2.0,
                     template-haskell >= 2.4,                     
                     text >= 0.10,
                     HDBC >= 2.2,
                     convertible >= 1.0,
                     HaXml >= 1.20.2,
                     FerryCore >= 0.4.5,
                     DSH-Pathfinder >= 0.3,
                     DSH-Core >= 0.2.3,
                     deepseq >= 1.1,
                     array >= 0.3

  Hs-Source-Dirs:    src

  GHC-Options:       -Wall -fno-warn-orphans -O3

  Exposed-modules:   Database.DSH.Compiler

  Other-modules:     Database.DSH.Compile