Name:                DSH-Core
Version:             0.2.3
Synopsis:            Database Supported Haskell
Description:         Database Supported Haskell
License:             BSD3
License-file:        LICENSE
Author:              George Giorgidze, Tom Schreiber, Nils Schweinsberg and Jeroen Weijers
Maintainer:          giorgidze@gmail.com
Stability:           Experimental
Category:            Database
Build-type:          Simple

-- Extra-source-files:

Cabal-version:       >= 1.2

Library
  Build-depends:     base >= 4 && <5,
                     syb,
                     mtl >= 2.0,
                     bytestring,
                     text,
                     HDBC,
                     convertible,
                     template-haskell,
                     haskell-src-exts,
                     syntax-trees,
                     csv

  Hs-Source-Dirs:    src

  GHC-Options:       -O3 -Wall

  Exposed-modules:   Database.DSH
                     Database.DSH.Internals

  Other-modules:     Database.DSH.QQ
                     Database.DSH.TH
                     Database.DSH.Data
                     Database.DSH.Combinators
                     Database.DSH.CSV
                     Database.DSH.Impossible
                     Paths_DSH_Core