Name:                DSH-Interpreter
Version:             0.1
Synopsis:            Interpreted (reference) implementation of DSH
Description:         Interpreted (reference) implementation of DSH
License:             BSD3
License-file:        LICENSE
Author:              George Giorgidze
Maintainer:          giorgidze@gmail.com
Category:            Database
Build-type:          Simple

-- Extra-source-files:

Cabal-version:       >=1.2


Library
  Build-depends:       base >= 4.2 && <5, csv, text >= 0.10, HDBC >= 2.2, convertible >= 1.0, DSH-Core >= 0.2.3 
  Hs-Source-Dirs:      src

  Exposed-modules:     Database.DSH.Interpreter
  -- Other-modules: