Name:                DSH
Version:             0.8.2.3
Synopsis:            Database Supported Haskell
Description:
  This is a Haskell library for database-supported program execution. Using
  this library a relational database management system (RDBMS) can be used as
  a coprocessor for the Haskell programming language, especially for those
  program fragments that carry out data-intensive and data-parallel
  computations.
  .
  Database executable program fragments can be written using the monad
  comprehension notation [2] and list processing combinators from the Haskell
  list prelude. Note that rather than embedding a relational language into
  Haskell, we turn idiomatic Haskell programs into SQL queries.
  .
  DSH faithfully represents list order and nesting, and compiles the list
  processing combinators into relational queries. The implementation avoids
  unnecessary data transfer and context switching between the database
  coprocessor and the Haskell runtime by ensuring that the number of generated
  relational queries is only determined by the program fragment's type and not
  by the database size.
  .
  DSH can be used to allow existing Haskell programs to operate on large scale
  data (e.g., larger than the available heap) or query existing database
  resident data with Haskell.
  .
  Note that this package is flagged experimental and therefore is not suited
  for production use. This is a proof of concept implementation only. To learn
  more about DSH, our paper entitled as "Haskell Boards the Ferry: Database-
  Supported Program Execution for Haskell" [1] is a recommended reading. The
  package includes a couple of examples that demonstrate how to use DSH.
  .
  The latest release implements new features described in our work-in-progress
  paper entitled as "Algebraic Data Types for Language-Integrated
  Queries" [3].
  .
  1. <http://db.inf.uni-tuebingen.de/files/giorgidze/ifl2010.pdf>
  .
  2. <http://db.inf.uni-tuebingen.de/files/giorgidze/haskell2011.pdf>
  .
  3. <http://db.inf.uni-tuebingen.de/files/giorgidze/adtq.pdf>

License:             BSD3
License-file:        LICENSE
Author:              George Giorgidze, Alexander Ulrich, Tom Schreiber, Nils Schweinsberg and Jeroen Weijers
Maintainer:          giorgidze@gmail.com, jeroen.weijers@uni-tuebingen.de
Stability:           Experimental
Category:            Database
Build-type:          Simple

Extra-source-files:  examples/Example01.hs
                     examples/Example02.hs
                     examples/Example03.hs
                     examples/Makefile
                     tests/Main.hs
                     tests/Makefile

Cabal-version:       >= 1.8

Library
  Build-depends:     base               >= 4.5 && < 5,
                     ghc-prim           >= 0.2.0.0,
                     containers         >= 0.4.0.0,
                     array              >= 0.4,
                     syb                >= 0.3,
                     mtl                >= 2.1,
                     bytestring         >= 0.9.1.10,
                     text               >= 0.11.0.6,
                     HDBC               >= 2.3.1.0,
                     convertible        >= 1.0.11.0,
                     template-haskell   >= 2.7,
                     HaXml              >= 1.23,
                     csv                >= 0.1.2,
                     Pathfinder         >= 0.5.10,
                     FerryCore          >= 0.4.6.4,
                     X100Client         >= 0.0.2,
                     pretty >= 1.0.1.1,
                     aeson >= 0.6.0.0,
                     Optimizer,
                     X100Client >= 0.0.2,
                     TableAlgebra >= 2.0.0
                     
  Hs-source-dirs:    src
  GHC-Options:       -O3 -Wall -Werror -fno-warn-orphans  -fno-warn-type-defaults

  Exposed-modules:   Database.DSH
                     Database.DSH.Interpreter
                     Database.DSH.Compiler
                     Database.DSH.Flattening

  Other-modules:     Database.DSH.Internals
                     Database.DSH.Externals
                     Database.DSH.Impossible
                     Database.DSH.CSV
                     Database.DSH.Compile
                     Database.DSH.CompileFlattening
                     Database.DSH.ExecuteFlattening
                     Database.DSH.TH
                     Database.DSH.Flattening.DBPH
                     Database.DSH.Flattening.Common.Data.Type
                     Database.DSH.Flattening.VL.Data.Query
                     Database.DSH.Flattening.NKL.NKLPrimitives
                     Database.DSH.Flattening.NKL.Opt
                     Database.DSH.Flattening.Common.Data.Val
                     Database.DSH.Flattening.Common.Data.Op
                     Database.DSH.Flattening.NKL.Data.NKL
                     Database.DSH.Flattening.FKL.Data.FKL
                     Database.DSH.Flattening.FKL.FKLPrimitives
                     Database.DSH.Flattening.Translate.NKL2FKL
                     Database.DSH.Flattening.FKL.Render.Render
                     Database.DSH.Flattening.Common.Impossible
                     Database.DSH.Flattening.Common.TransM
                     Database.DSH.Flattening.VL.VectorPrimitives
                     Database.DSH.Flattening.VL.PathfinderVectorPrimitives
                     Database.DSH.Flattening.Translate.FKL2VL
                     Database.DSH.Flattening.VL.MetaPrimitives
                     Database.DSH.Flattening.VL.VectorOperations
                     Database.DSH.Flattening.VL.VectorPrimitives
                     Database.DSH.Flattening.Translate.Algebra2SQL
                     Database.DSH.Flattening.VL.X100VectorPrimitives
                     Database.DSH.Flattening.VL.Data.DBVector
                     Database.DSH.Flattening.VL.Data.GraphVector
                     Database.DSH.Flattening.VL.VLPrimitives
                     Database.DSH.Flattening.Translate.VL2Algebra

executable vltox100
  Main-is: Database/DSH/Flattening/Tools/VLToX100.hs
  GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind -Werror
  hs-source-dirs:   src
  build-depends:    base >= 4.5,
                    mtl >= 2.1,
                    containers >= 0.4.0.0,
                    template-haskell >= 2.7,
                    TableAlgebra >= 2.0.0,
                    aeson >= 0.6,
                    bytestring >= 0.9.1.10,
                    pretty >= 1.0.1.1,
                    Optimizer
                  
Test-Suite Flattening_x100
    type:       exitcode-stdio-1.0
    Main-is:    tests/Main.hs
    Build-depends: base               >= 4.2 && < 5,
                   QuickCheck         >= 2.4,
                   DSH                >= 0.7.8.1,
                   text               >= 0.11,
                   X100Client         >= 0.0.2,
                   derive             >= 2.5,
                   test-framework-quickcheck2 >= 0.2.12.1,
                   test-framework >= 0.6
    cpp-options: -DisX100
    GHC-Options:       -O3 -Wall -Werror
    extensions: CPP
    
Test-Suite Flattening_TA
    type:       exitcode-stdio-1.0
    Main-is:    tests/Main.hs
    Build-depends: base               >= 4.2 && < 5,
                   QuickCheck         >= 2.4,
                   DSH                >= 0.7.8.1,
                   text               >= 0.11,
                   HDBC-postgresql    >= 2.3,
                   HDBC               >= 2.3,
                   derive             >= 2.5,
                   test-framework-quickcheck2 >= 0.2.12.1,
                   test-framework >= 0.6
    cpp-options: -DisDBPH
    GHC-Options:       -O3 -Wall -Werror
    extensions: CPP

Test-Suite Ferry_DSH
    type:       exitcode-stdio-1.0
    Main-is:    tests/Main.hs
    Build-depends: base               >= 4.2 && < 5,
                   QuickCheck         >= 2.4,
                   DSH                >= 0.7.8.1,
                   text               >= 0.11,
                   HDBC-postgresql    >= 2.3,
                   HDBC               >= 2.3,
                   derive             >= 2.5,
                   test-framework-quickcheck2 >= 0.2.12.1,
                   test-framework >= 0.6
    GHC-Options:       -O3 -Wall -Werror
    extensions: CPP
